--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+spring.datasource.username=mjkim
+spring.datasource.password=tifhffhxmkk1226kk!
+spring.datasource.url=jdbc:mysql://localhost/trpg
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost/trpg
 
+server.port=8070
+server.address=localhost
+# mysql 사용
+spring.jpa.database=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto = update
+# 로깅 레벨
+logging.level.org.hibernate=info
+
+# 하이버네이트가 실행한 모든 SQL문을 콘솔로 출력
+spring.jpa.properties.hibernate.show_sql=true
+# SQL문을 가독성 있게 표현
+spring.jpa.properties.hibernate.format_sql=true
+# 디버깅 정보 출력
+spring.jpa.properties.hibernate.use_sql_comments=true
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
